# RS2

./: .gitignore  README.md
Hardware&CAD/STEP Files/: Jig Barclamp.STEP  Jig Clamp.STEP  Jig Corner Alt.STEP  Jig Corner.STEP  Jig Plate.STEP  Pen Cap.STEP  Pen Effector.STEP
Hardware&CAD/STL Files/: Jig Barclamp.STL  Jig Clamp.STL  Jig Corner Alt.STL  Jig Corner.STL  Jig Plate.STL  Pen Cap.STL  Pen Effector.STL
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/moving_ur3e/lib/moving_ur3e/: troll_mover  (+1 more)
log/: latest_build  latest_list
src/install/: local_setup.sh  setup.sh
src/jointangledebug/: package.xml  setup.cfg  setup.py
src/jointangledebug/jointangledebug/: joint_node.py
src/log/: latest_build
src/movement/: setup.py
src/movement/scripts/: move_to_joint_state.py
src/moving_ur3e/: package.xml  setup.cfg  setup.py
src/moving_ur3e/scripts/: trollmovement.py
src/my_ur3_controller/: package.xml  setup.cfg  setup.py
src/selfie_taker/: package.xml  setup.cfg  setup.py
src/selfie_taker/selfie_taker/: Processor.py  svgSaver.py
src/svg_command_subscriber/: setup.cfg  setup.py
src/svg_command_subscriber/svg_command_subscriber/: command_subscriber.py
src/svg_generation/: CMakeLists.txt  setup.cfg  setup.py
src/svg_waypoint_publisher/: setup.cfg  setup.py
src/svg_waypoint_publisher/svg_waypoint_publisher/: waypoint_publisher.py
src/ur3e_controller/: CMakeLists.txt
src/ur3e_controller/src/: ur_node.cpp
src/ur3e_viewer_pkg/: package.xml  setup.cfg  setup.py
src/ur3e_viewer_pkg/launch/: ur3e_viewer.launch.py
(+361 files in other folders)
