<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moving_ur3e</name>
  <version>0.0.0</version>
  <description>Package to move the UR3e robot to specific joint angles</description>
  <maintainer email="ashanthan.a.mudaly@student.uts.edu.au">ashmu</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies required for the runtime of the package -->
  <depend>rclpy</depend>
  <depend>moveit_commander</depend>
  <depend>geometry_msgs</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

